feat: add foundation tooling and configuration
- Configure Prettier for code formatting
- Set up strict ESLint rules with TypeScript
- Configure Jest and React Testing Library
- Add absolute path aliases (@app/*, @features/*, etc.)
- Install and configure dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,20 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
+    "baseUrl": "src",
     "plugins": [
       {
         "name": "next"
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"],
+      "@app/*": ["app/*"],
+      "@features/*": ["features/*"],
+      "@components/*": ["components/*"],
+      "@lib/*": ["lib/*"],
+      "@utils/*": ["utils/*"],
+      "@types/*": ["types/*"]
     }
   },
   "include": [
